--- a/fr/docs.mdx
+++ b/fr/docs.mdx
@@ -108,7 +108,7 @@ Une table est identifiée de manière unique par la combinaison de `dbRootId` et
 | **Retourne** | Signature de transaction (string) |
 
 ```typescript
-import { codeIn } from 'iqlabs-sdk';
+import { codeIn } from '@iqlabs-official/solana-sdk';
 
 // Téléverser un seul fichier
 const signature = await codeIn(connection, signer, 'Hello, blockchain!');
@@ -126,7 +126,7 @@ const multiSig = await codeIn(connection, signer, ['file1.txt', 'file2.txt', 'fi
 | **Retourne** | Données stockées (string) |
 
 ```typescript
-import { readCodeIn } from 'iqlabs-sdk';
+import { readCodeIn } from '@iqlabs-official/solana-sdk';
 
 const data = await readCodeIn('5Xg7...', connection);
 console.log(data); // 'Hello, blockchain!'
@@ -143,7 +143,7 @@ console.log(data); // 'Hello, blockchain!'
 | **Retourne** | Signature de transaction (string) |
 
 ```typescript
-import { requestConnection } from 'iqlabs-sdk';
+import { requestConnection } from '@iqlabs-official/solana-sdk';
 
 // Envoyer une demande d'ami
 await requestConnection(
@@ -162,7 +162,7 @@ await requestConnection(
 | **Retourne** | TransactionInstruction |
 
 ```typescript
-import { contract } from 'iqlabs-sdk';
+import { contract } from '@iqlabs-official/solana-sdk';
 
 // Approuver une demande d'ami
 const approveIx = contract.manageConnectionInstruction(
@@ -188,7 +188,7 @@ const blockIx = contract.manageConnectionInstruction(
 | **Retourne** | `{ status: 'pending' \| 'approved' \| 'blocked', requester, blocker }` |
 
 ```typescript
-import { readConnection } from 'iqlabs-sdk';
+import { readConnection } from '@iqlabs-official/solana-sdk';
 
 const { status, requester, blocker } = await readConnection('my-db', walletA, walletB);
 console.log(status); // 'pending' | 'approved' | 'blocked'
@@ -203,7 +203,7 @@ console.log(status); // 'pending' | 'approved' | 'blocked'
 | **Retourne** | Signature de transaction (string) |
 
 ```typescript
-import { writeConnectionRow } from 'iqlabs-sdk';
+import { writeConnectionRow } from '@iqlabs-official/solana-sdk';
 
 await writeConnectionRow(
   connection, signer, 'my-db', connectionSeed,
@@ -223,7 +223,8 @@ Récupère toutes les connexions (demandes d'amis) d'un utilisateur en analysant
 | **Retourne** | Tableau d'objets de connexion avec dbRootId, partyA, partyB, status, requester, blocker, timestamp |
 
 ```typescript
-import { fetchUserConnections } from 'iqlabs-sdk/reader';
+import iqlabs from '@iqlabs-official/solana-sdk';
+const { fetchUserConnections } = iqlabs.reader;
 
 // Récupérer toutes les connexions (toutes les apps !)
 const connections = await fetchUserConnections(myPubkey, {
@@ -257,7 +258,7 @@ connections.forEach(conn => {
 | **Retourne** | Signature de transaction (string) |
 
 ```typescript
-import { writeRow } from 'iqlabs-sdk';
+import { writeRow } from '@iqlabs-official/solana-sdk';
 
 // Écrire la première ligne pour créer la table
 await writeRow(connection, signer, 'my-db', 'users', JSON.stringify({
@@ -280,7 +281,7 @@ await writeRow(connection, signer, 'my-db', 'users', JSON.stringify({
 | **Returns** | `Array<Record<string, unknown>>` |
 
 ```typescript
-import iqlabs from 'iqlabs-sdk';
+import iqlabs from '@iqlabs-official/solana-sdk';
 
 // Basic usage
 const rows = await iqlabs.reader.readTableRows(tablePda, { limit: 50 });
@@ -306,7 +307,7 @@ Collects all (or up to `maxSignatures`) transaction signatures for an account. L
 | **Returns** | `string[]` (signature strings) |
 
 ```typescript
-import iqlabs from 'iqlabs-sdk';
+import iqlabs from '@iqlabs-official/solana-sdk';
 
 // Collect all signatures
 const allSigs = await iqlabs.reader.collectSignatures(tablePda);
@@ -329,7 +330,7 @@ const rows = await iqlabs.reader.readTableRows(tablePda, { signatures: chunk });
 | **Retourne** | Tableau des noms de tables (string[]) |
 
 ```typescript
-import { getTablelistFromRoot } from 'iqlabs-sdk';
+import { getTablelistFromRoot } from '@iqlabs-official/solana-sdk';
 
 const tables = await getTablelistFromRoot('my-db');
 console.log('Table list:', tables);
@@ -344,7 +345,7 @@ console.log('Table list:', tables);
 | **Retourne** | Tableau de transactions |
 
 ```typescript
-import { fetchInventoryTransactions } from 'iqlabs-sdk';
+import { fetchInventoryTransactions } from '@iqlabs-official/solana-sdk';
 
 const myFiles = await fetchInventoryTransactions(myPubkey, 20);
 myFiles.forEach(tx => {
@@ -377,7 +378,7 @@ myFiles.forEach(tx => {
 | **Retourne** | Aucun (void) |
 
 ```typescript
-import { setRpcUrl } from 'iqlabs-sdk';
+import { setRpcUrl } from '@iqlabs-official/solana-sdk';
 
 setRpcUrl('https://your-rpc.example.com');
 ```
@@ -401,7 +402,8 @@ Fonction de bas niveau pour gérer les données des lignes dans les tables.
 | **Cas d'usage** | Gestion personnalisée des lignes, opérations par lots |
 
 ```typescript
-import { manageRowData } from 'iqlabs-sdk/writer';
+import iqlabs from '@iqlabs-official/solana-sdk';
+const { manageRowData } = iqlabs.writer;
 
 await manageRowData(connection, signer, {
   dbRootId: 'my-db',
@@ -424,7 +426,8 @@ Lit le PDA UserState d'un utilisateur.
 | **Cas d'usage** | Récupération des données de profil, vérification des comptes d'upload |
 
 ```typescript
-import { readUserState } from 'iqlabs-sdk/reader';
+import iqlabs from '@iqlabs-official/solana-sdk';
+const { readUserState } = iqlabs.reader;
 
 const userState = await readUserState(userPubkey);
 console.log('Profile:', userState.profile);
@@ -442,7 +445,8 @@ Lit les métadonnées associées à l'inventaire de l'utilisateur (fichiers tél
 | **Cas d'usage** | Lister les fichiers de l'utilisateur avec métadonnées, gestion des fichiers |
 
 ```typescript
-import { readInventoryMetadata } from 'iqlabs-sdk/reader';
+import iqlabs from '@iqlabs-official/solana-sdk';
+const { readInventoryMetadata } = iqlabs.reader;
 
 const metadata = await readInventoryMetadata(userPubkey);
 metadata.forEach(item => {
@@ -461,7 +465,8 @@ Récupère une liste de PDAs de session.
 | **Cas d'usage** | Gestion des sessions, suivi des sessions actives |
 
 ```typescript
-import { getSessionPdaList } from 'iqlabs-sdk/reader';
+import iqlabs from '@iqlabs-official/solana-sdk';
+const { getSessionPdaList } = iqlabs.reader;
 
 const sessions = await getSessionPdaList(userPubkey);
 sessions.forEach(session => {
@@ -482,7 +487,8 @@ Dérive une graine déterministe pour la messagerie directe (DM) entre deux util
 | **Cas d'usage** | Créer des identifiants de connexion cohérents, configuration de canal DM |
 
 ```typescript
-import { deriveDmSeed } from 'iqlabs-sdk/utils';
+import iqlabs from '@iqlabs-official/solana-sdk';
+const { deriveDmSeed } = iqlabs.utils;
 
 const seed1 = deriveDmSeed(walletA, walletB);
 const seed2 = deriveDmSeed(walletB, walletA);
@@ -500,7 +506,8 @@ Convertit une graine chaîne en format d'octets requis pour la dérivation de PD
 | **Cas d'usage** | Dérivation de PDA personnalisée, manipulation de graines de bas niveau |
 
 ```typescript
-import { toSeedBytes } from 'iqlabs-sdk/utils';
+import iqlabs from '@iqlabs-official/solana-sdk';
+const { toSeedBytes } = iqlabs.utils;
 
 const seedString = 'my-custom-seed';
 const seedBytes = toSeedBytes(seedString);
