--- a/de/docs.mdx
+++ b/de/docs.mdx
@@ -108,7 +108,7 @@ Eine Tabelle wird eindeutig durch die Kombination aus `dbRootId` und `tableSeed`
 | **Rückgabe** | Transaktionssignatur (string) |
 
 ```typescript
-import { codeIn } from 'iqlabs-sdk';
+import { codeIn } from '@iqlabs-official/solana-sdk';
 
 // Eine einzelne Datei hochladen
 const signature = await codeIn(connection, signer, 'Hello, blockchain!');
@@ -126,7 +126,7 @@ const multiSig = await codeIn(connection, signer, ['file1.txt', 'file2.txt', 'fi
 | **Rückgabe** | Gespeicherte Daten (string) |
 
 ```typescript
-import { readCodeIn } from 'iqlabs-sdk';
+import { readCodeIn } from '@iqlabs-official/solana-sdk';
 
 const data = await readCodeIn('5Xg7...', connection);
 console.log(data); // 'Hello, blockchain!'
@@ -143,7 +143,7 @@ console.log(data); // 'Hello, blockchain!'
 | **Rückgabe** | Transaktionssignatur (string) |
 
 ```typescript
-import { requestConnection } from 'iqlabs-sdk';
+import { requestConnection } from '@iqlabs-official/solana-sdk';
 
 // Eine Freundschaftsanfrage senden
 await requestConnection(
@@ -162,7 +162,7 @@ await requestConnection(
 | **Rückgabe** | TransactionInstruction |
 
 ```typescript
-import { contract } from 'iqlabs-sdk';
+import { contract } from '@iqlabs-official/solana-sdk';
 
 // Eine Freundschaftsanfrage genehmigen
 const approveIx = contract.manageConnectionInstruction(
@@ -188,7 +188,7 @@ const blockIx = contract.manageConnectionInstruction(
 | **Rückgabe** | `{ status: 'pending' \| 'approved' \| 'blocked', requester, blocker }` |
 
 ```typescript
-import { readConnection } from 'iqlabs-sdk';
+import { readConnection } from '@iqlabs-official/solana-sdk';
 
 const { status, requester, blocker } = await readConnection('my-db', walletA, walletB);
 console.log(status); // 'pending' | 'approved' | 'blocked'
@@ -203,7 +203,7 @@ console.log(status); // 'pending' | 'approved' | 'blocked'
 | **Rückgabe** | Transaktionssignatur (string) |
 
 ```typescript
-import { writeConnectionRow } from 'iqlabs-sdk';
+import { writeConnectionRow } from '@iqlabs-official/solana-sdk';
 
 await writeConnectionRow(
   connection, signer, 'my-db', connectionSeed,
@@ -223,7 +223,8 @@ Ruft alle Verbindungen (Freundschaftsanfragen) eines Nutzers ab, indem der Trans
 | **Rückgabe** | Array von Verbindungsobjekten mit dbRootId, partyA, partyB, status, requester, blocker, timestamp |
 
 ```typescript
-import { fetchUserConnections } from 'iqlabs-sdk/reader';
+import iqlabs from '@iqlabs-official/solana-sdk';
+const { fetchUserConnections } = iqlabs.reader;
 
 // Alle Verbindungen abrufen (über alle Apps!)
 const connections = await fetchUserConnections(myPubkey, {
@@ -257,7 +258,7 @@ connections.forEach(conn => {
 | **Rückgabe** | Transaktionssignatur (string) |
 
 ```typescript
-import { writeRow } from 'iqlabs-sdk';
+import { writeRow } from '@iqlabs-official/solana-sdk';
 
 // Erste Zeile schreiben, um die Tabelle zu erstellen
 await writeRow(connection, signer, 'my-db', 'users', JSON.stringify({
@@ -280,7 +281,7 @@ await writeRow(connection, signer, 'my-db', 'users', JSON.stringify({
 | **Returns** | `Array<Record<string, unknown>>` |
 
 ```typescript
-import iqlabs from 'iqlabs-sdk';
+import iqlabs from '@iqlabs-official/solana-sdk';
 
 // Basic usage
 const rows = await iqlabs.reader.readTableRows(tablePda, { limit: 50 });
@@ -306,7 +307,7 @@ Collects all (or up to `maxSignatures`) transaction signatures for an account. L
 | **Returns** | `string[]` (signature strings) |
 
 ```typescript
-import iqlabs from 'iqlabs-sdk';
+import iqlabs from '@iqlabs-official/solana-sdk';
 
 // Collect all signatures
 const allSigs = await iqlabs.reader.collectSignatures(tablePda);
@@ -329,7 +330,7 @@ const rows = await iqlabs.reader.readTableRows(tablePda, { signatures: chunk });
 | **Rückgabe** | Tabellenname-Array (string[]) |
 
 ```typescript
-import { getTablelistFromRoot } from 'iqlabs-sdk';
+import { getTablelistFromRoot } from '@iqlabs-official/solana-sdk';
 
 const tables = await getTablelistFromRoot('my-db');
 console.log('Table list:', tables);
@@ -344,7 +345,7 @@ console.log('Table list:', tables);
 | **Rückgabe** | Transaktions-Array |
 
 ```typescript
-import { fetchInventoryTransactions } from 'iqlabs-sdk';
+import { fetchInventoryTransactions } from '@iqlabs-official/solana-sdk';
 
 const myFiles = await fetchInventoryTransactions(myPubkey, 20);
 myFiles.forEach(tx => {
@@ -377,7 +378,7 @@ myFiles.forEach(tx => {
 | **Rückgabe** | Keine (void) |
 
 ```typescript
-import { setRpcUrl } from 'iqlabs-sdk';
+import { setRpcUrl } from '@iqlabs-official/solana-sdk';
 
 setRpcUrl('https://your-rpc.example.com');
 ```
@@ -401,7 +402,8 @@ Low-Level-Funktion zur Verwaltung von Zeilendaten in Tabellen.
 | **Anwendungsfall** | Benutzerdefinierte Zeilenverwaltung, Batch-Operationen |
 
 ```typescript
-import { manageRowData } from 'iqlabs-sdk/writer';
+import iqlabs from '@iqlabs-official/solana-sdk';
+const { manageRowData } = iqlabs.writer;
 
 await manageRowData(connection, signer, {
   dbRootId: 'my-db',
@@ -424,7 +426,8 @@ Liest den UserState-PDA eines Nutzers.
 | **Anwendungsfall** | Profildaten abrufen, Upload-Zählung prüfen |
 
 ```typescript
-import { readUserState } from 'iqlabs-sdk/reader';
+import iqlabs from '@iqlabs-official/solana-sdk';
+const { readUserState } = iqlabs.reader;
 
 const userState = await readUserState(userPubkey);
 console.log('Profile:', userState.profile);
@@ -442,7 +445,8 @@ Liest Metadaten, die mit dem Inventar des Nutzers (hochgeladene Dateien) verbund
 | **Anwendungsfall** | Nutzerdateien mit Metadaten auflisten, Dateiverwaltung |
 
 ```typescript
-import { readInventoryMetadata } from 'iqlabs-sdk/reader';
+import iqlabs from '@iqlabs-official/solana-sdk';
+const { readInventoryMetadata } = iqlabs.reader;
 
 const metadata = await readInventoryMetadata(userPubkey);
 metadata.forEach(item => {
@@ -461,7 +465,8 @@ Ruft eine Liste von Session-PDAs ab.
 | **Anwendungsfall** | Sitzungsverwaltung, Nachverfolgung aktiver Sitzungen |
 
 ```typescript
-import { getSessionPdaList } from 'iqlabs-sdk/reader';
+import iqlabs from '@iqlabs-official/solana-sdk';
+const { getSessionPdaList } = iqlabs.reader;
 
 const sessions = await getSessionPdaList(userPubkey);
 sessions.forEach(session => {
@@ -482,7 +487,8 @@ Leitet einen deterministischen Seed für Direktnachrichten (DM) zwischen zwei Nu
 | **Anwendungsfall** | Konsistente Verbindungs-IDs erstellen, DM-Kanal einrichten |
 
 ```typescript
-import { deriveDmSeed } from 'iqlabs-sdk/utils';
+import iqlabs from '@iqlabs-official/solana-sdk';
+const { deriveDmSeed } = iqlabs.utils;
 
 const seed1 = deriveDmSeed(walletA, walletB);
 const seed2 = deriveDmSeed(walletB, walletA);
@@ -500,7 +506,8 @@ Konvertiert einen String-Seed in das Byte-Format, das für die PDA-Ableitung erf
 | **Anwendungsfall** | Benutzerdefinierte PDA-Ableitung, Low-Level-Seed-Manipulation |
 
 ```typescript
-import { toSeedBytes } from 'iqlabs-sdk/utils';
+import iqlabs from '@iqlabs-official/solana-sdk';
+const { toSeedBytes } = iqlabs.utils;
 
 const seedString = 'my-custom-seed';
 const seedBytes = toSeedBytes(seedString);
