--- a/ja/docs.mdx
+++ b/ja/docs.mdx
@@ -108,7 +108,7 @@ JSON データをデータベースのようにテーブルへ保存します。
 | **戻り値** | トランザクション署名（string） |
 
 ```typescript
-import { codeIn } from 'iqlabs-sdk';
+import { codeIn } from '@iqlabs-official/solana-sdk';
 
 // 単一ファイルをアップロード
 const signature = await codeIn(connection, signer, 'Hello, blockchain!');
@@ -126,7 +126,7 @@ const multiSig = await codeIn(connection, signer, ['file1.txt', 'file2.txt', 'fi
 | **戻り値** | 保存されたデータ（string） |
 
 ```typescript
-import { readCodeIn } from 'iqlabs-sdk';
+import { readCodeIn } from '@iqlabs-official/solana-sdk';
 
 const data = await readCodeIn('5Xg7...', connection);
 console.log(data); // 'Hello, blockchain!'
@@ -143,7 +143,7 @@ console.log(data); // 'Hello, blockchain!'
 | **戻り値** | トランザクション署名（string） |
 
 ```typescript
-import { requestConnection } from 'iqlabs-sdk';
+import { requestConnection } from '@iqlabs-official/solana-sdk';
 
 // フレンドリクエストを送信
 await requestConnection(
@@ -162,7 +162,7 @@ await requestConnection(
 | **戻り値** | TransactionInstruction |
 
 ```typescript
-import { contract } from 'iqlabs-sdk';
+import { contract } from '@iqlabs-official/solana-sdk';
 
 // フレンドリクエストを承認
 const approveIx = contract.manageConnectionInstruction(
@@ -188,7 +188,7 @@ const blockIx = contract.manageConnectionInstruction(
 | **戻り値** | `{ status: 'pending' \| 'approved' \| 'blocked', requester, blocker }` |
 
 ```typescript
-import { readConnection } from 'iqlabs-sdk';
+import { readConnection } from '@iqlabs-official/solana-sdk';
 
 const { status, requester, blocker } = await readConnection('my-db', walletA, walletB);
 console.log(status); // 'pending' | 'approved' | 'blocked'
@@ -203,7 +203,7 @@ console.log(status); // 'pending' | 'approved' | 'blocked'
 | **戻り値** | トランザクション署名（string） |
 
 ```typescript
-import { writeConnectionRow } from 'iqlabs-sdk';
+import { writeConnectionRow } from '@iqlabs-official/solana-sdk';
 
 await writeConnectionRow(
   connection, signer, 'my-db', connectionSeed,
@@ -223,7 +223,8 @@ UserState PDA のトランザクション履歴を解析して、ユーザーの
 | **戻り値** | dbRootId, partyA, partyB, status, requester, blocker, timestamp を含む接続オブジェクトの配列 |
 
 ```typescript
-import { fetchUserConnections } from 'iqlabs-sdk/reader';
+import iqlabs from '@iqlabs-official/solana-sdk';
+const { fetchUserConnections } = iqlabs.reader;
 
 // すべての接続を取得（全アプリ対象）
 const connections = await fetchUserConnections(myPubkey, {
@@ -257,7 +258,7 @@ connections.forEach(conn => {
 | **戻り値** | トランザクション署名（string） |
 
 ```typescript
-import { writeRow } from 'iqlabs-sdk';
+import { writeRow } from '@iqlabs-official/solana-sdk';
 
 // 最初の行を書き込み、テーブルを作成
 await writeRow(connection, signer, 'my-db', 'users', JSON.stringify({
@@ -280,7 +281,7 @@ await writeRow(connection, signer, 'my-db', 'users', JSON.stringify({
 | **Returns** | `Array<Record<string, unknown>>` |
 
 ```typescript
-import iqlabs from 'iqlabs-sdk';
+import iqlabs from '@iqlabs-official/solana-sdk';
 
 // Basic usage
 const rows = await iqlabs.reader.readTableRows(tablePda, { limit: 50 });
@@ -306,7 +307,7 @@ Collects all (or up to `maxSignatures`) transaction signatures for an account. L
 | **Returns** | `string[]` (signature strings) |
 
 ```typescript
-import iqlabs from 'iqlabs-sdk';
+import iqlabs from '@iqlabs-official/solana-sdk';
 
 // Collect all signatures
 const allSigs = await iqlabs.reader.collectSignatures(tablePda);
@@ -329,7 +330,7 @@ const rows = await iqlabs.reader.readTableRows(tablePda, { signatures: chunk });
 | **戻り値** | テーブル名配列（string[]） |
 
 ```typescript
-import { getTablelistFromRoot } from 'iqlabs-sdk';
+import { getTablelistFromRoot } from '@iqlabs-official/solana-sdk';
 
 const tables = await getTablelistFromRoot('my-db');
 console.log('Table list:', tables);
@@ -344,7 +345,7 @@ console.log('Table list:', tables);
 | **戻り値** | トランザクション配列 |
 
 ```typescript
-import { fetchInventoryTransactions } from 'iqlabs-sdk';
+import { fetchInventoryTransactions } from '@iqlabs-official/solana-sdk';
 
 const myFiles = await fetchInventoryTransactions(myPubkey, 20);
 myFiles.forEach(tx => {
@@ -377,7 +378,7 @@ myFiles.forEach(tx => {
 | **戻り値** | なし（void） |
 
 ```typescript
-import { setRpcUrl } from 'iqlabs-sdk';
+import { setRpcUrl } from '@iqlabs-official/solana-sdk';
 
 setRpcUrl('https://your-rpc.example.com');
 ```
@@ -401,7 +402,8 @@ setRpcUrl('https://your-rpc.example.com');
 | **用途** | カスタム行管理、バッチ操作 |
 
 ```typescript
-import { manageRowData } from 'iqlabs-sdk/writer';
+import iqlabs from '@iqlabs-official/solana-sdk';
+const { manageRowData } = iqlabs.writer;
 
 await manageRowData(connection, signer, {
   dbRootId: 'my-db',
@@ -424,7 +426,8 @@ await manageRowData(connection, signer, {
 | **用途** | プロフィールデータの取得、アップロード数の確認 |
 
 ```typescript
-import { readUserState } from 'iqlabs-sdk/reader';
+import iqlabs from '@iqlabs-official/solana-sdk';
+const { readUserState } = iqlabs.reader;
 
 const userState = await readUserState(userPubkey);
 console.log('Profile:', userState.profile);
@@ -442,7 +445,8 @@ console.log('Upload count:', userState.fileCount);
 | **用途** | メタデータ付きのユーザーファイル一覧、ファイル管理 |
 
 ```typescript
-import { readInventoryMetadata } from 'iqlabs-sdk/reader';
+import iqlabs from '@iqlabs-official/solana-sdk';
+const { readInventoryMetadata } = iqlabs.reader;
 
 const metadata = await readInventoryMetadata(userPubkey);
 metadata.forEach(item => {
@@ -461,7 +465,8 @@ metadata.forEach(item => {
 | **用途** | セッション管理、アクティブセッションの追跡 |
 
 ```typescript
-import { getSessionPdaList } from 'iqlabs-sdk/reader';
+import iqlabs from '@iqlabs-official/solana-sdk';
+const { getSessionPdaList } = iqlabs.reader;
 
 const sessions = await getSessionPdaList(userPubkey);
 sessions.forEach(session => {
@@ -482,7 +487,8 @@ sessions.forEach(session => {
 | **用途** | 一貫した接続 ID の作成、DM チャネルの設定 |
 
 ```typescript
-import { deriveDmSeed } from 'iqlabs-sdk/utils';
+import iqlabs from '@iqlabs-official/solana-sdk';
+const { deriveDmSeed } = iqlabs.utils;
 
 const seed1 = deriveDmSeed(walletA, walletB);
 const seed2 = deriveDmSeed(walletB, walletA);
@@ -500,7 +506,8 @@ console.log(seed1 === seed2); // true
 | **用途** | カスタム PDA 導出、低レベルなシード操作 |
 
 ```typescript
-import { toSeedBytes } from 'iqlabs-sdk/utils';
+import iqlabs from '@iqlabs-official/solana-sdk';
+const { toSeedBytes } = iqlabs.utils;
 
 const seedString = 'my-custom-seed';
 const seedBytes = toSeedBytes(seedString);
