add the install

--- a/de/docs.mdx
+++ b/de/docs.mdx
@@ -7,6 +7,14 @@ description: "Kernkonzepte und Funktionen für das IQLabs SDK"
 Dieses Dokument ist in Arbeit und wird weiter verfeinert.
 </Note>
 
+## Installation
+
+```bash
+npm i @iqlabs-official/solana-sdk
+```
+
+---
+
 ## Kernkonzepte
 
 Dies sind die wichtigsten Konzepte, die du kennen solltest, bevor du das IQLabs SDK verwendest.
