--- a/docs.mdx
+++ b/docs.mdx
@@ -7,6 +7,14 @@ description: "Core concepts and functions for the IQLabs SDK"
 This document is in progress and will be refined.
 </Note>
 
+## Installation
+
+```bash
+npm i @iqlabs-official/solana-sdk
+```
+
+---
+
 ## Core Concepts
 
 These are the key concepts to know before using the IQLabs SDK.
