--- a/es/docs.mdx
+++ b/es/docs.mdx
@@ -7,6 +7,14 @@ description: "Conceptos y funciones principales para el SDK de IQLabs"
 Este documento está en progreso y se seguirá refinando.
 </Note>
 
+## Instalación
+
+```bash
+npm i @iqlabs-official/solana-sdk
+```
+
+---
+
 ## Conceptos clave
 
 Estos son los conceptos clave que debes conocer antes de usar el SDK de IQLabs.
