--- a/fr/docs.mdx
+++ b/fr/docs.mdx
@@ -7,6 +7,14 @@ description: "Concepts et fonctions principaux pour le SDK IQLabs"
 Ce document est en cours de rédaction et sera affiné.
 </Note>
 
+## Installation
+
+```bash
+npm i @iqlabs-official/solana-sdk
+```
+
+---
+
 ## Concepts clés
 
 Voici les concepts clés à connaître avant d'utiliser le SDK IQLabs.
