--- a/ja/docs.mdx
+++ b/ja/docs.mdx
@@ -7,6 +7,14 @@ description: "IQLabs SDK の主要な概念と関数"
 このドキュメントは作成中で、今後改善されます。
 </Note>
 
+## インストール
+
+```bash
+npm i @iqlabs-official/solana-sdk
+```
+
+---
+
 ## コア概念
 
 これらは IQLabs SDK を使う前に知っておくべき主要な概念です。
