--- a/ko/docs.mdx
+++ b/ko/docs.mdx
@@ -7,6 +7,14 @@ description: "IQLabs SDK의 핵심 개념과 함수"
 이 문서는 작성 중이며 계속 업데이트될 예정입니다.
 </Note>
 
+## 설치
+
+```bash
+npm i @iqlabs-official/solana-sdk
+```
+
+---
+
 ## 핵심 개념
 
 IQLabs SDK를 사용하기 전에 알아야 할 주요 개념들입니다.
