--- a/pt-br/docs.mdx
+++ b/pt-br/docs.mdx
@@ -7,6 +7,14 @@ description: "Conceitos e funções principais para o SDK da IQLabs"
 Este documento está em andamento e será refinado.
 </Note>
 
+## Instalação
+
+```bash
+npm i @iqlabs-official/solana-sdk
+```
+
+---
+
 ## Conceitos principais
 
 Estes são os conceitos principais que você precisa conhecer antes de usar o SDK da IQLabs.
