--- a/zh-cn/docs.mdx
+++ b/zh-cn/docs.mdx
@@ -7,6 +7,14 @@ description: "IQLabs SDK 的核心概念与函数"
 本文档仍在完善中，将持续更新。
 </Note>
 
+## 安装
+
+```bash
+npm i @iqlabs-official/solana-sdk
+```
+
+---
+
 ## 核心概念
 
 这是在使用 IQLabs SDK 之前需要了解的关键概念。
